--- a/views/receptionist/booking/index.ejs
+++ b/views/receptionist/booking/index.ejs
@@ -12,7 +12,7 @@
                         <h2 class="content-header-title float-left mb-0">Customers</h2>
                         <div class="breadcrumb-wrapper">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/admin/dashboard">Admin</a>
+                                <li class="breadcrumb-item"><a href="/receptionist/dashboard">Receptionist</a>
                                 </li>
                                 <li class="breadcrumb-item"><a href="#">Customers</a>
                                 </li>
@@ -40,6 +40,7 @@
                                         <th>Facilities</th>
                                         <th>Check In</th>
                                         <th>Checked Out</th>
+                                        <th>Checkin Status</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
