--- a/views/admin/customer/create.ejs
+++ b/views/admin/customer/create.ejs
@@ -34,62 +34,111 @@
                                 <h4 class="card-title">Create New Customers</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/customer/" method="post">
+
+                                <form action="/admin/customer/" method="post" novalidate class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
-                                                <input type="text" class="form-control" id="fname"
-                                                    required name="customer[fname]" placeholder="First Name" />
+                                                <input type="text" class="form-control" id="fname" required
+                                                    name="customer[fname]" placeholder="First Name" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="lname">Last Name</label>
-                                                <input type="text" class="form-control" id="lname"
-                                                    required name="customer[lname]" placeholder="Last Name" />
+                                                <input type="text" class="form-control" id="lname" required
+                                                    name="customer[lname]" placeholder="Last Name" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" id="email"
-                                                    required name="customer[email]" placeholder="Enter email" />
+                                                <input type="emal" class="form-control" id="email" required
+                                                    name="customer[email]" placeholder="Enter email" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
-                                                <input type="text" class="form-control" id="mobile"
-                                                    required name="customer[mobile]" placeholder="Enter Mobile" />
+                                                <input type="text" class="form-control" id="mobile" required
+                                                    name="customer[mobile]" placeholder="Enter Mobile" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="nic">NIC</label>
-                                                <input type="text" class="form-control" id="nic" required name="customer[nic]"
-                                                    placeholder="NIC" />
+                                                <input type="text" class="form-control" id="nic" required
+                                                    name="customer[nic]" placeholder="NIC" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="dob">DOB</label>
-                                                <input type="date" class="form-control" id="dob" required name="customer[dob]"
-                                                    placeholder="dob" />
+                                                <input type="date" class="form-control" id="dob" required
+                                                    name="customer[dob]" placeholder="dob" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="address">Address</label>
-                                                <input type="text" class="form-control" id="address"
-                                                    required name="customer[address]" placeholder="Address" />
+                                                <input type="text" class="form-control" id="address" required
+                                                    name="customer[address]" placeholder="Address" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="city">City</label>
-                                                <input type="text" class="form-control" id="city" required name="customer[city]"
-                                                    placeholder="City" />
+                                                <input type="text" class="form-control" id="city" required
+                                                    name="customer[city]" placeholder="City" />
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -100,16 +149,29 @@
                                                     <option value="<%= state._id %>"><%= state.name %> </option>
                                                     <%  } %>
                                                 </select>
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="country">Country</label>
-                                                <select class="form-control" id="country" required name="customer[country]">
+                                                <select class="form-control" id="country" required
+                                                    name="customer[country]">
                                                     <% for(let country of data['countries']){ %>
                                                     <option value="<%= country._id %>"><%= country.name %> </option>
                                                     <%  } %>
                                                 </select>
+                                                <div class="valid-feedback">
+                                                    Looks Good!
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
