--- a/views/admin/user/edit.ejs
+++ b/views/admin/user/edit.ejs
@@ -34,14 +34,17 @@
                                 <h4 class="card-title">Edit User</h4>
                             </div>
                             <div class="card-body">
-                                <form action="/admin/user/<%= user._id %>?_method=PUT" method="post">
+                                <form action="/admin/user/<%= user._id %>?_method=PUT" method="post"  novalidate class="validated-form">
                                     <div class="row">
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="fname">First Name</label>
                                                 <input type="text" class="form-control" id="fname"
                                                     value="<%=user.fname%>" name="user[fname]"
-                                                    placeholder="First Name" />
+                                                    required placeholder="First Name" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -49,18 +52,23 @@
                                                 <label for="lname">Last Name</label>
                                                 <input type="text" class="form-control" id="lname"
                                                     value="<%=user.lname%>" name="user[lname]"
-                                                    placeholder="Last Name" />
+                                                    required placeholder="Last Name" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="role">Role</label>
-                                                <select class="form-control" value="<%=user.role%>" name="user[role]"
+                                                <select required class="form-control" value="<%=user.role%>" name="user[role]"
                                                     id="role">
                                                     <option value="a">Admin</option>
                                                     <option value="r">Receptionist</option>
                                                 </select>
-
+                                                <div class="invalid-feedback">
+                                                    Check Again!
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -68,7 +76,10 @@
                                                 <label for="email">Email</label>
                                                 <input type="text" class="form-control" id="email"
                                                     value="<%=user.email%>" name="user[email]"
-                                                    placeholder="Enter email" />
+                                                    required placeholder="Enter email" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
@@ -76,14 +87,20 @@
                                                 <label for="username">Username</label>
                                                 <input type="text" class="form-control" id="username"
                                                     value="<%=user.username%>" name="user[username]"
-                                                    placeholder="Username" />
+                                                    required placeholder="Username" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
                                             <div class="form-group">
                                                 <label for="password">Password</label>
                                                 <input type="password" class="form-control" id="password"
-                                                    name="user[password]" placeholder="Password" />
+                                                    name="user[password]" required placeholder="Password" />
+                                                    <div class="invalid-feedback">
+                                                        Check Again!
+                                                    </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-md-6 col-12 mb-1">
