--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -11,7 +11,7 @@
     <meta name="keywords"
         content="admin template, Vuexy admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="PIXINVENT">
-    <title>SPM-Assignment - e</title>
+    <title>Error - Vuexy - Bootstrap HTML admin template</title>
     <link rel="apple-touch-icon" href="/app-assets/images/ico/apple-icon-120.png">
     <link rel="shortcut icon" type="image/x-icon" href="/app-assets/images/ico/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600"
@@ -54,7 +54,7 @@
             <div class="content-header row">
             </div>
             <div class="content-body">
-                <!-- Coming soon page-->
+                <!-- Error page-->
                 <div class="misc-wrapper"><a class="brand-logo" href="javascript:void(0);">
                         <svg viewBox="0 0 139 95" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" height="28">
@@ -95,31 +95,26 @@
                     </a>
                     <div class="misc-inner p-2 p-sm-3">
                         <div class="w-100 text-center">
-                            <h2 class="mb-1">We are launching soon 🚀</h2>
-                            <p class="mb-3">We're creating something awesome. Please subscribe to get notified when it's
-                                ready!</p>
-                            <!-- <form class="form-inline justify-content-center row m-0 mb-2" action="javascript:void(0);"> -->
-                            <!-- <input class="form-control col-12 col-md-5 mb-1 mr-md-2" id="notify-email" type="text" placeholder="john@example.com" /> -->
-                            <!-- <button class="btn btn-primary mb-1 btn-sm-block" type="submit">Notify</button> -->
-                            <!-- </form> -->
+                            <h2 class="mb-1">Page Not Found 🕵🏻‍♀️</h2>
+                            <p class="mb-2">Oops! 😖 The requested URL was not found on this server.</p>
                             <% if(currentUser){ %>
                             <% if(currentUser.role=="a"){ %>
                             <a href="/admin/dashboard" class="btn btn-primary mb-1 btn-sm-block">Go To Dashboard</a>
                             <% }%>
                             <% if(currentUser.role=="r"){ %>
-                            <a href="/receptionist/dashboard" class="btn btn-primary mb-1 btn-sm-block">Go To Dashboard</a>
+                            <a href="/receptionist/dashboard" class="btn btn-primary mb-1 btn-sm-block">Go To
+                                Dashboard</a>
 
                             <% }%>
                             <% }else{%>
                             <a href="/login" class="btn btn-primary mb-1 btn-sm-block">Login As
                                 Admin/Receptionist</a>
                             <% } %>
-                            <img class="img-fluid" src="/app-assets/images/pages/coming-soon.svg"
-                                alt="Coming soon page" />
+                            <img class="img-fluid" src="/app-assets/images/pages/error.svg" alt="Error page" />
                         </div>
                     </div>
                 </div>
-                <!-- / Coming soon page-->
+                <!-- / Error page-->
             </div>
         </div>
     </div>
