--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,9 +23,22 @@
                  </a>
                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-user">
                      <a class="dropdown-item" href="/logout"><i class="mr-50" data-feather="power"></i> Logout</a>
+                     <a class="dropdown-item" href="/profile"><i class="mr-50" data-feather="user"></i> Profile</a>
                  </div>
              </li>
-             <% } %>
+             <% }else{%>
+                <li class="nav-item"><a class="nav-link dropdown-user-link"
+                    id="dropdown-user" href="/login" aria-expanded="false">
+                    <div class="user-nav d-sm-flex d-none"><span
+                            class="user-name font-weight-bolder">Login
+                        </span><span
+                            class="user-status"></span>
+                    </div><span class="avatar"><img class="round"
+                            src="/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40"
+                            width="40"><span class="avatar-status-online"></span></span>
+                </a>
+            </li>
+            <% } %>
          </ul>
      </div>
  </nav>
