--- a/views/receptionist/room/index.ejs
+++ b/views/receptionist/room/index.ejs
@@ -9,12 +9,12 @@
             <div class="content-header-left col-md-9 col-12 mb-2">
                 <div class="row breadcrumbs-top">
                     <div class="col-12">
-                        <h2 class="content-header-title float-left mb-0">Customers</h2>
+                        <h2 class="content-header-title float-left mb-0">Rooms</h2>
                         <div class="breadcrumb-wrapper">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="/receptionist/dashboard">Receptionist</a>
                                 </li>
-                                <li class="breadcrumb-item"><a href="#">Customers</a>
+                                <li class="breadcrumb-item"><a href="#">Rooms</a>
                                 </li>
                                 <li class="breadcrumb-item active">Index
                                 </li>
@@ -30,19 +30,15 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="card">
-                            <table class="datatables-basic-customer-rep table">
+                            <table class="datatables-basic-room-avail table">
                                 <thead>
                                     <tr>
                                         <th>ID</th>
-                                        <th>First Name</th>
-                                        <th>Last Name</th>
-                                        <th>Email</th>
-                                        <th>Mobile</th>
-                                        <th>NIC</th>
-                                        <th>State</th>
-                                        <th>Country</th>
+                                        <th>Number</th>
+                                        <th>Type</th>
+                                        <th>Charge</th>
+                                        <th>Headcount</th>
                                         <th>Status</th>
-                                        <th>Action</th>
                                     </tr>
                                 </thead>
                             </table>
